--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,18 @@
     tools:context=".activities.MainActivity">
 
     <ListView
-        android:id="@+id/listview"
-        android:layout_width="281dp"
-        android:layout_height="275dp"
-        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="96dp"
-        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
-        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="0.505" app:layout_constraintVertical_bias="0.0"/>
+        android:id="@+id/pokemonListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
