--- a/app/src/main/res/layout/activity_detail_view.xml
+++ b/app/src/main/res/layout/activity_detail_view.xml
@@ -105,4 +105,15 @@
         app:layout_constraintEnd_toEndOf="@+id/movesListView"
         app:layout_constraintStart_toEndOf="@+id/statsNamesListView"
         app:layout_constraintTop_toBottomOf="@+id/statsTextView" />
+
+    <Switch
+        android:id="@+id/caughtSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="caught"
+        app:layout_constraintBottom_toTopOf="@+id/typesListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
