--- a/app/src/main/res/layout-land/activity_detail_view.xml
+++ b/app/src/main/res/layout-land/activity_detail_view.xml
@@ -8,14 +8,11 @@
 
     <ListView
         android:id="@+id/typesListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="153dp"
+        android:layout_height="106dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/pokemonName" />
 
@@ -65,10 +62,9 @@
         android:id="@+id/abilitiesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="Abilities"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/statsNamesListView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/movesTextView"
@@ -83,16 +79,21 @@
         android:id="@+id/statsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="Stats"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintBottom_toTopOf="@+id/abilitiesListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintStart_toEndOf="@+id/typesListView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.322" />
 
     <ListView
         android:id="@+id/statsNamesListView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/statsValuesListView"
+        android:layout_width="82dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="304dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@id/statsTextView">
 
@@ -102,9 +103,9 @@
         android:id="@+id/statsValuesListView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/movesListView"
+        app:layout_constraintBottom_toBottomOf="@+id/statsNamesListView"
         app:layout_constraintStart_toEndOf="@+id/statsNamesListView"
-        app:layout_constraintTop_toBottomOf="@+id/statsTextView" />
+        app:layout_constraintTop_toTopOf="@+id/statsNamesListView" />
 
     <Switch
         android:id="@+id/caughtSwitch"
